<resources>
    <string name="app_name">Gym Tracker</string>
    <string name="logo_description">Logo Image</string>
    <string name="new_training">NEW TRAINING</string>
    <string name="training_history">TRAINING HISTORY</string>
    <string name="my_results">MY RESULTS</string>
    <string name="add_exercise">ADD EXERCISE</string>
    <string name="new_training_textview">NEW TRAINING </string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="exercise_choice">Choose your exercise</string>
    <string name="end_training">END TRAINING</string>
    <string name="reps_label">Reps:</string>
    <string name="weight_label">Weight:</string>
    <string name="delete_exercise">Delete</string>
    <string name="no_workouts_to_show">Currently there are no workouts to show</string>
</resources>
