<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo_description"
        android:scaleType="centerInside"
        android:src="@drawable/gymtracker" />

    <Button
        android:id="@+id/newTrainingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/new_training"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/trainingsHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/training_history"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_results"
        android:textSize="14sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>