<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTrainingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:text="@string/new_training_textview"
        android:id="@+id/newTrainingDayTime"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_exercise"
        android:id="@+id/addExerciseButton" />
    <ListView
        android:id="@+id/newTrainingExercisesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/end_training"
        android:id="@+id/endTrainingButton"
        android:layout_marginBottom="20dp"/>
</android.widget.LinearLayout>