<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/detailsExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/detailsRepsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps_label"
            android:textSize="16sp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/detailsRepsValue"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/detailsWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/detailsWeightValue"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/detailsAddExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_exercise"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        />

</LinearLayout>